--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -1,6 +1,15 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
-    "paths": {}
+    "paths": {
+      "@components/*": ["src/presentation/components/*"],
+      "@routes/*": ["src/presentation/routes/*"],
+      "@pages/*": ["src/presentation/pages/*"],
+      "@utils/*": ["src/application/utils/*"],
+      "@models/*": ["src/application/models/*"],
+      "@stores/*": ["src/application/stores/*"],
+      "@hooks/*": ["src/application/hooks/*"],
+      "@api/*": ["src/infrastructure/api/*"]
+    }
   }
 }
