🏠build: 풀리퀘스트 시 원격 배포를 시도하는 스크립트 작성 중 SCP 액션을 SSH 액션으로 변경

--- a/.github/workflows/deploy-feat.yml
+++ b/.github/workflows/deploy-feat.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Build React App
         run: yarn build
 
-      - name: Make Directory in SSH by Current Branch Name
-        uses: appleboy/scp-action@master
+      - name: Make Directory in Server by Current Branch Name
+        uses: appleboy/ssh-action@master
         env:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
@@ -48,7 +48,7 @@ jobs:
           script: |
             mkdir /home/ubuntu/builds/${{ steps.branch-name.outputs.current_branch }}
 
-      - name: Copy Build File to SSH
+      - name: Copy Build File to Server
         uses: appleboy/scp-action@master
         env:
           host: ${{ secrets.HOST }}
