--- a/.github/workflows/deploy-feat.yml
+++ b/.github/workflows/deploy-feat.yml
@@ -37,6 +37,12 @@ jobs:
       - name: Build React App
         run: yarn build
 
+      - name: Read Secrets PORT_DEV
+        run: 'echo "$PORT_DEV" > PORT_DEV'
+        shell: bash
+        env:
+          PORT_DEV: ${{secrets.PORT_DEV}}
+
       - name: Make Directory in Server by Current Branch Name
         uses: appleboy/ssh-action@master
         env:
