--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,7 +6,7 @@ name: Run ESLint
 on:
   # Triggers the workflow on push or pull request events but only for the dev branch
   pull_request:
-    branches: [ dev ]
+    branches: [dev]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -15,23 +15,23 @@ env:
   CI: true
 
 jobs:
-  check-dist:
+  check-lint:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: Set Node.js 16.x
         uses: actions/setup-node@v2.4.1
         with:
           node-version: 16.x
-          
+
       - name: Install Client Dependencies
         run: yarn
 
       - name: Check Lint Client React App
         run: yarn lint
-        
+
       - uses: actions/upload-artifact@v2
         if: ${{ failure() && steps.diff.conclusion == 'failure' }}
         with:
