🐛fix: 이미 존재하는 디렉터리를 삭제하는 로직 추가

--- a/.github/workflows/deploy-feat.yml
+++ b/.github/workflows/deploy-feat.yml
@@ -45,7 +45,12 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT_DEV }}
           script: |
-            mkdir /home/ubuntu/builds/${{ steps.branch-name.outputs.current_branch }}
+            DIR="/home/ubuntu/builds/${{ steps.branch-name.outputs.current_branch }}"
+            if [ -d "$DIR"]
+            then
+              rm -rf $DIR
+            else
+              mkdir $DIR
 
       - name: Copy Build File to Server
         uses: appleboy/scp-action@master
