--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "recoil": "^0.5.2",
-    "reset-css": "^5.0.1",
     "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.0"
   },
