🐛fix: if else문 수정, feat/#2가 아닌 feat/2에 생성되도록 변경

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -44,8 +44,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT_DEV }}
-          source: './build'
-          target: '/home/ubuntu'
+          source: './build/*'
+          target: '/home/ubuntu/builds'
 
       - uses: actions/upload-artifact@v2
         if: ${{ failure() && steps.diff.conclusion == 'failure' }}
