--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "naega-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://naegasogaeseo-dev.kro.kr/",
   "dependencies": {
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.14.1",
