🏠build: dev브랜치 빌드 파일의 port번호를 변경함

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -43,9 +43,9 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT_DEV }}
-          source: './build/*'
-          target: '/home/ubuntu/builds'
+          port: ${{ secrets.PORT }}
+          source: './build'
+          target: '/home/ubuntu/'
 
       - uses: actions/upload-artifact@v2
         if: ${{ failure() && steps.diff.conclusion == 'failure' }}
