🐛fix: @style을 @styles로 변경하여 타 모듈과의 충돌을 막음

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,7 +5,7 @@
       "@components/*": ["src/presentation/components/*"],
       "@routes/*": ["src/presentation/routes/*"],
       "@pages/*": ["src/presentation/pages/*"],
-      "@style/*": ["src/presentation/style/*"],
+      "@styles/*": ["src/presentation/style/*"],
       "@utils/*": ["src/application/utils/*"],
       "@models/*": ["src/application/models/*"],
       "@stores/*": ["src/application/stores/*"],
