📝 chore: assets 폴더 절대 경로 지정

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
+      "@assets/*": ["src/assets/*"],
       "@components/*": ["src/presentation/components/*"],
       "@routes/*": ["src/presentation/routes/*"],
       "@pages/*": ["src/presentation/pages/*"],
