:nail_care:style: api 제공 로직을 수행하는 친구의 디렉터리명을 api로 변경

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -10,8 +10,7 @@
       "@models/*": ["src/application/models/*"],
       "@stores/*": ["src/application/stores/*"],
       "@hooks/*": ["src/application/hooks/*"],
-      "@api/*": ["src/infrastructure/api/*"],
-      "@provider/*": ["src/infrastructure/provider/*"]
+      "@api/*": ["src/infrastructure/api/*"]
     }
   }
 }
