--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lottie-web": "^5.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "3.1.4",
     "react-ga": "^3.3.0",
     "react-query": "3.34.16",
     "react-router-dom": "^6.2.1",
