🚀deploy: QA브랜치 배포 세팅

--- a/.github/workflows/deploy-feat.yml
+++ b/.github/workflows/deploy-feat.yml
@@ -6,8 +6,10 @@ name: Run Deploy on Development Server
 on:
   # Triggers the workflow on push or pull request events but only for the dev branch
   pull_request:
-    branches: [dev]
+    branches: [dev, qa]
     paths-ignore: ['**.md']
+  push:
+    branches: [qa]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
