--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -11,6 +11,7 @@
       "@models/*": ["src/application/models/*"],
       "@stores/*": ["src/application/stores/*"],
       "@hooks/*": ["src/application/hooks/*"],
+      "@querys/*": ["src/application/querys/*"],
       "@api/*": ["src/infrastructure/api/*"],
       "@infrastructure/*": ["src/infrastructure/*"]
     }
