--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.19",
     "axios": "^0.24.0",
+    "get-orientation": "^1.1.2",
     "lottie-web": "^5.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
