--- a/.github/workflows/deploy-feat.yml
+++ b/.github/workflows/deploy-feat.yml
@@ -29,6 +29,12 @@ jobs:
         with:
           node-version: 16.x
 
+      - name: Create .env file
+        run: |
+          touch .env
+          echo REACT_APP_CLIENT_ID=${{ secrets.REACT_APP_CLIENT_ID }}\ >> .env
+          cat .env
+
       - name: Install Client Dependencies
         run: yarn
 
