--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/axios": "^0.14.0",
+    "@types/dom-to-image": "^2.6.4",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
@@ -16,6 +18,8 @@
     "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.19",
     "axios": "^0.24.0",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "lottie-web": "^5.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
