--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://naegasogaeseo-dev.kro.kr/",
   "dependencies": {
     "@craco/craco": "^6.4.3",
+    "@ctrl/react-adsense": "1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
