--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "lottie-web": "^5.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
