--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "typescript": "^4.5.4",
+    "vconsole": "^3.14.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
